Cleaning up the app prop file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,7 @@ spring.cloud.stream.bindings.output.content.type=application/json
 server.port=0
 
 logging.level.org.springframework.web=ERROR
-logging.level.io.ossim.omar.scdf.aggregator=WARN
-
-fileExtension1=.zip
-fileExtension2=.txt
+logging.level.io.ossim.omar.scdf.notification.email=DEBUG
 
 # Don't use Cloud Formation
 cloud.aws.stack.auto=false
