--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.cloud.stream.bindings.input.destination=sqs-filtered
-spring.cloud.stream.bindings.output.destination=sqs-aggregated
-spring.cloud.stream.bindings.output.content.type=application/json
+spring.cloud.stream.bindings.input.destination=test
 server.port=0
 
 logging.level.org.springframework.web=ERROR
