Added Spring Starter Email...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.cloud.stream.bindings.input.destination=test
+spring.cloud.stream.bindings.input.destination=email
 server.port=0
 
 logging.level.org.springframework.web=ERROR
@@ -9,3 +9,5 @@ cloud.aws.stack.auto=false
 
 cloud.aws.credentials.accessKey=a
 cloud.aws.credentials.secretKey=b
+
+send.from.email='omarftw@gmail.com'
