--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,11 @@ ext {
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-aws')
 	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
+	compile('org.springframework.boot:spring-boot-starter-mail')
+	compile('org.springframework:spring-context-support')
 	compile('org.codehaus.groovy:groovy')
 	compile('org.codehaus.groovy:groovy-json')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
