Minor clean up of some TODO stuff.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ cloud.aws.stack.auto=false
 
 cloud.aws.credentials.accessKey=a
 cloud.aws.credentials.secretKey=b
+
+send.from.email='send.to.me@somedomain.com'
