remove applicationContext.xml, add instance configuration to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,12 @@ server.port=0
 logging.level.org.springframework.web=ERROR
 logging.level.io.ossim.omar.scdf.notification.email=DEBUG
 
+send.from.email='send.to.me@somedomain.com'
+
 # Don't use Cloud Formation
 cloud.aws.stack.auto=false
+cloud.aws.credentials.instanceProfile=true
+cloud.aws.region.auto=true
 
-cloud.aws.credentials.accessKey=a
-cloud.aws.credentials.secretKey=b
-
-send.from.email='send.to.me@somedomain.com'
+#cloud.aws.credentials.accessKey=a
+#cloud.aws.credentials.secretKey=b
