Email from SMTP is now working successfully.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=0
 logging.level.org.springframework.web=ERROR
 logging.level.io.ossim.omar.scdf.notification.email=DEBUG
 
-send.from.email='send.to.me@somedomain.com'
+send.from.email='test@somedomain.com'
 
 # Don't use Cloud Formation
 cloud.aws.stack.auto=false
