Code clean up, and new formatting for email message body.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.cloud.stream.bindings.input.destination=email
+spring.cloud.stream.bindings.input.destination=files-parsed
 server.port=0
 
 logging.level.org.springframework.web=ERROR
 logging.level.io.ossim.omar.scdf.notification.email=DEBUG
-
-send.from.email='test@somedomain.com'
 
 # Don't use Cloud Formation
 cloud.aws.stack.auto=false
