Refactored to use @StreamListener, and did some code clean up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ cloud.aws.region.auto=true
 
 #cloud.aws.credentials.accessKey=a
 #cloud.aws.credentials.secretKey=b
+
+send.from.email=a@test.com
+
+mail.custom.signature="The Omar Dropbox Team"
